<resources>
    <string name="app_name">ManageChildren</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="passowrd">Password</string>
    <string name="passowrd_incorrect">Incorrect password</string>
    <string name="login">LOGIN</string>
    <string name="login_title">Login</string>
    <string name="forgot">Forgot password?</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full name</string>
    <string name="mobileNumber">Mobile number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="birth">Birth</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="sign_up_title">Sign up</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="continue_btn">CONTINUE</string>
    <string name="who">Who?</string>

    <string name="all_field_required">All fields are required.</string>
    <string name="minimum_required_password">Password is required minimum 8 characters.</string>
    <string name="confirm_password_not_match">Confirm password doesn\'t match.</string>
    <string name="email_invalid">Your email is invalid.</string>
    <string name="select_terms_conditions">Please select Terms and Conditions</string>
    <string name="enter_email_password">Enter both email and password</string>

    <string name="user_password_incorrect">Email or password incorrect.</string>
    <string name="error_try_again">There was an error, try again.</string>
    <string name="register_success">Register successfully.</string>

    <string name="email_already_registered">Email has already been registered.</string>
    <string name="same_account">Note: Parent and child use the same account.</string>
    <string name="session_expired_login_again">Session expired, please login again</string>

    <string name="ok">Ok</string>
    <string name="re_try">Retry</string>
    <string name="cancel">Cancel</string>


    <string name="child">Child</string>
    <string name="parent">Parent</string>
    <string name="who_device">Who is the device belongs to?</string>
    <string name="belong_parent">This device belongs to parent</string>
    <string name="belong_child">This device belongs to my child</string>


    <string name="title_add_child_form">Add Child</string>
    <string name="child_exist">This child\'s name is exist</string>


    <string name="add_child_title">Your child</string>
    <string name="add_child">Please add child you want to monitor</string>
    <string name="no_internet">No internet</string>
    <string name="logout_other">System will logout this child account in device login before
    </string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Loading</string>
    <string name="title_activity_panel">PanelActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Navigtion in paretn device-->
    <string name="sms">Sms</string>
    <string name="contact">Contact</string>
    <string name="location_trace">Location</string>
    <string name="calllog">Callog</string>
    <string name="application">Application</string>
    <string name="media">Media</string>
    <string name="photo">Photo</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="performing_data_sync">Performing data synchronization</string>

    <!--Navigation parent in child device-->
    <string name="rules">Rules</string>
    <string name="change_child">Change child</string>
    <string name="information">Information</string>
    <string name="uninstall">Uninstall</string>


    <string name="grant_accessibility">
        To protect your child, please grant app access to Accessibility\n
        To grant access, flow step:\n
        Step 1: After click CONTINUE, in next screen find and select ManageChild\n
        Step 2: Turn On and press back \n
    </string>

    <string name="enable_uninstall">
        To active uninstall app:\n
        After click CONTINUE, please tap Active in next screen.
    </string>


    <string name="no_device">This account doesn\'t have in child device \n
        Please install app in child device and active this account.
    </string>

    <string name="msg_ban_app">
        App %1$s is not allow use by your parent.
    </string>
    <string name="msg_limit_use">
        You only %1$s one day for entertainment
    </string>

    <string name="minute">minute</string>
    <string name="hours">hours</string>

    <string name="create_password">Create password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="require_password">Enter password</string>
    <string name="min_4_characters">Password required minimum 4 characters</string>

    <string name="create_password_success">Create password successfully.</string>

    <string name="enter_password">Please enter field password</string>
    <string name="title_activity_password">PasswordActivity</string>


    <!--Confirm it's phone your child-->
    <string name="title_confirm_phone_child">Does this phone belong to your child?</string>
    <string name="content_confirm_your_child">This app will monitor activity your child include:</string>
    <string name="monitor_time_use">Limit time use</string>
    <string name="monitor_block_app">Block app unwant</string>
    <string name="monitor_sms">Sms track</string>
    <string name="monitor_location">Location current track</string>
    <string name="monitor_calllog">Calllog track</string>
    <string name="monitor_media">Photo, Video, Audio</string>
    <string name="monitor_contact">Contact</string>

    <!--Confirm it't parent-->
    <string name="title_confirm_phone_parent">Does this phone belong to parent?</string>
    <string name="content_confirm_your_parent">This app help your manage your child\'s activity include:</string>
    <!--Accessibility-->
    <string name="accessibility_description">Please enable to continue</string>


    <!--In rule-->
    <string name="set_time_use">Set time use (one day)</string>
    <string name="set_rules_app">Set rules app</string>

    <string name="go_settings">Enter password and go to settings</string>

    <!--Cacs loai app-->
    <string name="time_app">Limit time app</string>
    <string name="ban_app">Block app</string>
    <string name="normal_app">Normal app</string>

    <!--confirm exit-->

    <string name="confirm_exit">Press again to exit</string>
    <string name="unknown_location">Unknown location</string>
    <string name="retrieving_location">Retrieving current your child\'s location</string>
    <string name="current_location">You are currently in %1$s, open in maps application</string>


    <string name="grant_permission_to_continue">You need grant permission to continue</string>
</resources>
