<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.thangld.managechildren.main.parent.RulesFragment">

    <!--Chon enable app time-->


    <Switch
        android:checked="true"
        android:id="@+id/sw_limit_time_use"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/monitor_time_use"
        android:textColor="@color/text_dark_app" />

    <LinearLayout
        android:id="@+id/layout_set_time"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColor="@color/text_dark_app">

        <TextView
            android:textColor="@color/text_dark_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set_time_use" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <Spinner
                android:layout_weight="1"
                android:id="@+id/spinner_hours"
                android:layout_width="0dp"
                android:layout_height="34dp"
                android:layout_gravity="center_vertical"
                android:prompt="@string/fullName"></Spinner>
            <TextView
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/hours"/>

            <Spinner
                android:layout_weight="1"
                android:id="@+id/spinner_minute"
                android:layout_width="0dp"
                android:layout_height="34dp"
                android:layout_gravity="center_vertical"
                android:prompt="@string/fullName"></Spinner>
            <TextView
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/minute"/>

        </LinearLayout>




    </LinearLayout>

    <LinearLayout
        android:minHeight="300dp"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColor="@color/text_dark_app">

        <TextView
            android:textColor="@color/text_dark_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set_rules_app" />
        <ListView
            android:id="@+id/lv_app"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ListView>
    </LinearLayout>
</LinearLayout>