<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/toast_root"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/white_greyish_light">


    <!--<TextView-->
    <!--android:layout_alignParentTop="true"-->
    <!--android:id="@+id/title"-->
    <!--android:text="Confirm"-->
    <!--android:layout_width="fill_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:drawablePadding="10dp"-->
    <!--android:gravity="center_vertical"-->
    <!--android:padding="20px"-->
    <!--android:textColor="@color/black"-->
    <!--android:textSize="15sp" />-->

    <Button
        android:gravity="center"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"

        android:layout_marginTop="5dp"
        android:id="@+id/normal_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/normal_app"
        android:textColor="@color/black"></Button>

    <Button
        android:gravity="center"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"

        android:drawableLeft="@drawable/ban_app"
        android:layout_marginTop="5dp"
        android:id="@+id/ban_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/msg"
        android:layout_weight="1"
        android:background="@color/white"
        android:text="@string/ban_app"
        android:textColor="@color/black"></Button>

    <Button

        android:gravity="center"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:drawableLeft="@drawable/time_app"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/limit_time_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/msg"
        android:layout_weight="1"
        android:background="@color/white"
        android:text="@string/time_app"
        android:textColor="@color/black"></Button>


</LinearLayout>